@@ -1116,6 +1116,7 @@ also IEEE Std 1003.1-2008 (POSIX.1-2008).</para>
     pipe2
     pow10
     pow10f
+    ppoll
     removexattr
     setxattr
     strchrnul
